@@ -166,7 +166,6 @@
     , "SUPPORT_WINMM_HIGHRES_TIMER" : "1"
     , "SUPPORT_PARTIALBUSY_WAIT_LOOP" : "1"
     , "SUPPORT_SCREEN_CAPTURE" : "1"
-    , "SUPPORT_GIF_RECORDING" : "1"
     , "SUPPORT_COMPRESSION_API" : "1"
     , "SUPPORT_AUTOMATION_EVENTS" : "1"
     , "SUPPORT_CLIPBOARD_IMAGE" : "1"
