@@ -2386,6 +2386,25 @@
       ]
     },
     {
+      "name": "MatrixCompose",
+      "description": "",
+      "returnType": "Matrix",
+      "params": [
+        {
+          "type": "Vector3",
+          "name": "translation"
+        },
+        {
+          "type": "Quaternion",
+          "name": "rotation"
+        },
+        {
+          "type": "Vector3",
+          "name": "scale"
+        }
+      ]
+    },
+    {
       "name": "MatrixDecompose",
       "description": "",
       "returnType": "void",
