@@ -392,22 +392,22 @@ module Raylib
   ICON_SLICING = 231
   ICON_MANUAL_CONTROL = 232
   ICON_COLLISION = 233
-  ICON_234 = 234
-  ICON_235 = 235
-  ICON_236 = 236
-  ICON_237 = 237
-  ICON_238 = 238
-  ICON_239 = 239
-  ICON_240 = 240
-  ICON_241 = 241
-  ICON_242 = 242
-  ICON_243 = 243
-  ICON_244 = 244
-  ICON_245 = 245
-  ICON_246 = 246
-  ICON_247 = 247
-  ICON_248 = 248
-  ICON_249 = 249
+  ICON_CIRCLE_ADD = 234
+  ICON_CIRCLE_ADD_FILL = 235
+  ICON_CIRCLE_WARNING = 236
+  ICON_CIRCLE_WARNING_FILL = 237
+  ICON_BOX_MORE = 238
+  ICON_BOX_MORE_FILL = 239
+  ICON_BOX_MINUS = 240
+  ICON_BOX_MINUS_FILL = 241
+  ICON_UNION = 242
+  ICON_INTERSECTION = 243
+  ICON_DIFFERENCE = 244
+  ICON_SPHERE = 245
+  ICON_CYLINDER = 246
+  ICON_CONE = 247
+  ICON_ELLIPSOID = 248
+  ICON_CAPSULE = 249
   ICON_250 = 250
   ICON_251 = 251
   ICON_252 = 252
