@@ -1,3 +1,7 @@
+2025-12-28  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/05f5143603ba4db9b3157e981926a42c55c4c766 ) and raygui ( https://github.com/raysan5/raygui/commit/0b94b80c92c34c79f8d902f51f68dfc1edacf51b )
+
 2025-11-18  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* examples/particles_fireworks.rb : Added
